feat & fix: lexical基础匹配器设计和token流操控
内存检查已经通过
能正常匹配代码为token
设置了一个用于test的函数位于main.c，并且使用printToekn函数可视化token(主要是处理\n)
修复了严重bug: 位于mem.c文件, 将memStrcpy中，释放str的步骤放到了函数末尾
tokenMessage涵盖file、tokenStream等结构体，并且可以一次生成，一次释放
在main.c文件中，准备了一个测试函数testMain2、testMain3和tokenStream可视化函数

需要传入一个命令行参数, 即vm文件的位置。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,8 @@ PROJECT(VirtualMath C)
 SET(CMAKE_C_STANDARD 11)
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
-AUX_SOURCE_DIRECTORY(memory PASER_LIST)
-ADD_EXECUTABLE(VirtualMath main.c ${PASER_LIST})
+AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/memory MEM_LIST)
+AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/parser PASER_LIST)
+
+message("project dir is ${PROJECT_SOURCE_DIR}")
+ADD_EXECUTABLE(VirtualMath main.c ${PASER_LIST} ${MEM_LIST})
