--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,9 @@ INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/memory MEM_LIST)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/parser PASER_LIST)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_LIST)
+AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/file FILE_LIST)
 
 MESSAGE("project dir is ${PROJECT_SOURCE_DIR}")
-ADD_LIBRARY(VirtualMathCore STATIC ${SRC_LIST} ${PASER_LIST} ${MEM_LIST})
+ADD_LIBRARY(VirtualMathCore STATIC ${SRC_LIST} ${PASER_LIST} ${MEM_LIST} ${FILE_LIST})
 ADD_EXECUTABLE(VirtualMath main.c)
 TARGET_LINK_LIBRARIES(VirtualMath VirtualMathCore)
