refactor: 把st从inter中提取出来
允许运行多段代码
parser关闭了log系统

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,4 @@ AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/gc GC_LIST)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/argument ARGUMENT_LIST)
 
 MESSAGE("project dir is ${PROJECT_SOURCE_DIR}")
-ADD_LIBRARY(VirtualMathCore STATIC ${SRC_LIST} ${GC_LIST} ${PASER_LIST} ${MEM_LIST} ${FILE_LIST} ${ARGUMENT_LIST})
-ADD_EXECUTABLE(VirtualMath main.c)
-TARGET_LINK_LIBRARIES(VirtualMath VirtualMathCore)
+ADD_EXECUTABLE(VirtualMath main.c ${SRC_LIST} ${GC_LIST} ${PASER_LIST} ${MEM_LIST} ${FILE_LIST} ${ARGUMENT_LIST})
