--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,20 +3,12 @@ PROJECT(VirtualMath C)
 SET(CMAKE_C_STANDARD 11)
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/parser/include)
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include)
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ofunc/include)
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/VirtulMathCore/include)
 
-AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/memory MEM_LIST)
-AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/parser PASER_LIST)
-AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_LIST)
-AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/file FILE_LIST)
-AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/gc GC_LIST)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/argument ARGUMENT_LIST)
-AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/ofunc/src OFUNC_LIST)
-AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/ofunc/c_lib CLIB_LIST)
-AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/signalhandler HANDLER_LIST)
 
 MESSAGE("project dir is ${PROJECT_SOURCE_DIR}")
-ADD_EXECUTABLE(VirtualMath main.c ${SRC_LIST} ${GC_LIST} ${PASER_LIST} ${MEM_LIST} ${FILE_LIST} ${ARGUMENT_LIST} ${OFUNC_LIST} ${HANDLER_LIST} ${CLIB_LIST})
-TARGET_LINK_LIBRARIES(VirtualMath dl)
+
+ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/VirtulMathCore)
+ADD_EXECUTABLE(VirtualMath main.c ${ARGUMENT_LIST})
+TARGET_LINK_LIBRARIES(VirtualMath VirtualMathCore)
