fix: 修复windows上无dlfcn的问题
windows上编译使用dlfcn-win32代替dlfcn
VitualMathCore为静态库

--- a/VirtulMathCore/CMakeLists.txt
+++ b/VirtulMathCore/CMakeLists.txt
@@ -16,5 +16,10 @@ AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ofunc/src OFUNC_LIST)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ofunc/c_lib CLIB_LIST)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/signalhandler HANDLER_LIST)
 
-ADD_LIBRARY(VirtualMathCore SHARED ${SRC_LIST} ${GC_LIST} ${PASER_LIST} ${MEM_LIST} ${FILE_LIST} ${ARGUMENT_LIST} ${OFUNC_LIST} ${HANDLER_LIST} ${CLIB_LIST})
-TARGET_LINK_LIBRARIES(VirtualMathCore dl)
+ADD_LIBRARY(VirtualMathCore STATIC ${SRC_LIST} ${GC_LIST} ${PASER_LIST} ${MEM_LIST} ${FILE_LIST} ${ARGUMENT_LIST} ${OFUNC_LIST} ${HANDLER_LIST} ${CLIB_LIST})
+IF (NOT (${CMAKE_SYSTEM_NAME} STREQUAL "Windows"))
+    TARGET_LINK_LIBRARIES(VirtualMathCore dl)
+ELSE()
+    ADD_LIBRARY(dlwin32 STATIC src/win/dlfcn_win32.c)
+    TARGET_LINK_LIBRARIES(VirtualMathCore dlwin32)
+ENDIF()
