--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,9 @@ PROJECT(VirtualMath C)
 SET(CMAKE_C_STANDARD 11)
 
 OPTION(GC "GC" ON)
+OPTION(SET_DEBUG "SET_DEBUG" ON)
 
-IF (${CMAKE_BUILD_TYPE} STREQUAL Debug)
+IF (${SET_DEBUG})
     ADD_DEFINITIONS(-DDEBUG=1)
 ELSE()
     ADD_DEFINITIONS(-DDEBUG=0)
