--- a/vmcore/CMakeLists.txt
+++ b/vmcore/CMakeLists.txt
@@ -1,5 +1,5 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-PROJECT(VirtualMathCore C)
+PROJECT(vmcore C)
 SET(CMAKE_C_STANDARD 11)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
@@ -18,13 +18,13 @@ AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ofunc/clib CLIB_LIST)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/signalhandler HANDLER_LIST)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/md5 MD5_LIST)
 
-ADD_LIBRARY(VirtualMathCore STATIC ${SRC_LIST} ${GC_LIST} ${PASER_LIST} ${MEM_LIST} ${FILE_LIST} ${ARGUMENT_LIST} ${OFUNC_LIST} ${HANDLER_LIST} ${CLIB_LIST} ${MD5_LIST})
-TARGET_LINK_LIBRARIES(VirtualMathCore m)
+ADD_LIBRARY(vmcore STATIC ${SRC_LIST} ${GC_LIST} ${PASER_LIST} ${MEM_LIST} ${FILE_LIST} ${ARGUMENT_LIST} ${OFUNC_LIST} ${HANDLER_LIST} ${CLIB_LIST} ${MD5_LIST})
+TARGET_LINK_LIBRARIES(vmcore m)
 IF (NOT (${CMAKE_SYSTEM_NAME} STREQUAL "Windows"))
-    TARGET_LINK_LIBRARIES(VirtualMathCore ffi)
-    TARGET_LINK_LIBRARIES(VirtualMathCore dl)
+    TARGET_LINK_LIBRARIES(vmcore ffi)
+    TARGET_LINK_LIBRARIES(vmcore dl)
 ELSE()
-    TARGET_LINK_LIBRARIES(VirtualMathCore libffi)
+    TARGET_LINK_LIBRARIES(vmcore libffi)
     ADD_LIBRARY(dlwin32 STATIC src/win/dlfcn_win32.c)
-    TARGET_LINK_LIBRARIES(VirtualMathCore dlwin32)
+    TARGET_LINK_LIBRARIES(vmcore dlwin32)
 ENDIF()
