feat: 添加lib文件夹
vmcore的依赖库都放在lib文件夹下
仅添加了Linux的支持

link #16

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ SET(CMAKE_C_STANDARD 11)
 OPTION(GC "GC" ON)
 OPTION(SET_DEBUG "SET_DEBUG" ON)
 
+SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_CURRENT_SOURCE_DIR}/bin)
+
 IF (${SET_DEBUG})
     ADD_DEFINITIONS(-DDEBUG=1)
 ELSE()
