--- a/vmcore/CMakeLists.txt
+++ b/vmcore/CMakeLists.txt
@@ -8,6 +8,12 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/include)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/ofunc/include)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/md5/include)
 
+IF (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/linux/include)
+    LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/linux)
+    LINK_LIBRARIES(ffi)
+ENDIF()
+
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory MEM_LIST)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/parser PASER_LIST)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SRC_LIST)
@@ -20,8 +26,8 @@ AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/md5 MD5_LIST)
 
 ADD_LIBRARY(vmcore SHARED ${SRC_LIST} ${GC_LIST} ${PASER_LIST} ${MEM_LIST} ${FILE_LIST} ${ARGUMENT_LIST} ${OFUNC_LIST} ${HANDLER_LIST} ${CLIB_LIST} ${MD5_LIST})
 TARGET_LINK_LIBRARIES(vmcore m)
-IF (NOT (${CMAKE_SYSTEM_NAME} STREQUAL "Windows"))
-    TARGET_LINK_LIBRARIES(vmcore ffi)
+
+IF (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
     TARGET_LINK_LIBRARIES(vmcore dl)
 ELSE()
     TARGET_LINK_LIBRARIES(vmcore libffi)
