feat: vmcore/lib添加了对windows的支持
vmcore支持使用msys2/mingw64编译

--- a/vmcore/CMakeLists.txt
+++ b/vmcore/CMakeLists.txt
@@ -8,12 +8,18 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/include)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/ofunc/include)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/md5/include)
 
-IF (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+MESSAGE("CMAKE_SYSTEM_NAME is ${CMAKE_SYSTEM_NAME}")
+IF (CMAKE_SYSTEM_NAME MATCHES "Linux" OR CMAKE_SYSTEM_NAME MATCHES "CYGWIN")
     INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/linux/include)
     LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/linux)
-    LINK_LIBRARIES(ffi)
+ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
+    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/windows/include)
+    LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/windows)
 ENDIF()
 
+LINK_LIBRARIES(ffi)  # 添加库
+
+# 搜索源文件
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory MEM_LIST)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/parser PASER_LIST)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SRC_LIST)
@@ -26,11 +32,4 @@ AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/md5 MD5_LIST)
 
 ADD_LIBRARY(vmcore SHARED ${SRC_LIST} ${GC_LIST} ${PASER_LIST} ${MEM_LIST} ${FILE_LIST} ${ARGUMENT_LIST} ${OFUNC_LIST} ${HANDLER_LIST} ${CLIB_LIST} ${MD5_LIST})
 TARGET_LINK_LIBRARIES(vmcore m)
-
-IF (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-    TARGET_LINK_LIBRARIES(vmcore dl)
-ELSE()
-    TARGET_LINK_LIBRARIES(vmcore libffi)
-    ADD_LIBRARY(dlwin32 STATIC src/win/dlfcn_win32.c)
-    TARGET_LINK_LIBRARIES(vmcore dlwin32)
-ENDIF()
+TARGET_LINK_LIBRARIES(vmcore dl)
