refactor: 重新修改cmake寻找包的方式

--- a/.gitignore
+++ b/.gitignore
@@ -19,16 +19,16 @@
 *.pch
 
 # Libraries
-#*.lib
-#*.a
-#*.la
-#*.lo
+*.lib
+*.a
+*.la
+*.lo
 
 # Shared objects (inc. Windows DLLs)
-#*.dll
-#*.so
-#*.so.*
-#*.dylib
+*.dll
+*.so
+*.so.*
+*.dylib
 
 # Executables
 *.exe
@@ -232,3 +232,4 @@ gen
 vgcore.*
 .vs
 /bin
+/lib
