--- a/vmcore/CMakeLists.txt
+++ b/vmcore/CMakeLists.txt
@@ -8,16 +8,16 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/include)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/ofunc/include)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/md5/include)
 
-MESSAGE("CMAKE_SYSTEM_NAME is ${CMAKE_SYSTEM_NAME}")
-IF (CMAKE_SYSTEM_NAME MATCHES "Linux" OR CMAKE_SYSTEM_NAME MATCHES "CYGWIN")
-    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/linux/include)
-    LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/linux)
-ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
-    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/windows/include)
-    LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/windows)
-ENDIF()
-
-LINK_LIBRARIES(ffi)  # 添加库
+#MESSAGE("CMAKE_SYSTEM_NAME is ${CMAKE_SYSTEM_NAME}")
+#IF (CMAKE_SYSTEM_NAME MATCHES "Linux" OR CMAKE_SYSTEM_NAME MATCHES "CYGWIN")
+#    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/linux/include)
+#    LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/linux)
+#ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
+#    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/windows/include)
+#    LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/windows)
+#ENDIF()
+#
+#LINK_LIBRARIES(ffi)  # 添加库
 
 # 搜索源文件
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory MEM_LIST)
@@ -30,6 +30,15 @@ AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ofunc/clib CLIB_LIST)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/signalhandler HANDLER_LIST)
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/md5 MD5_LIST)
 
+FIND_LIBRARY(libffi ffi REQUIRED)
+FIND_LIBRARY(libdl dl REQUIRED)
+FIND_LIBRARY(libm m REQUIRED)
+
+FIND_PATH(ffih ffi.h REQUIRED)
+INCLUDE_DIRECTORIES(${ffih})
+
+MESSAGE("libm = ${libm}; libdl = ${libdl}; libffi = ${libffi}")
+MESSAGE("ffi.h = ${ffih};")
+
 ADD_LIBRARY(vmcore SHARED ${SRC_LIST} ${GC_LIST} ${PASER_LIST} ${MEM_LIST} ${FILE_LIST} ${ARGUMENT_LIST} ${OFUNC_LIST} ${HANDLER_LIST} ${CLIB_LIST} ${MD5_LIST})
-TARGET_LINK_LIBRARIES(vmcore m)
-TARGET_LINK_LIBRARIES(vmcore dl)
+TARGET_LINK_LIBRARIES(vmcore ${libffi} ${libdl} ${libm})
