--- a/vmcore/CMakeLists.txt
+++ b/vmcore/CMakeLists.txt
@@ -27,12 +27,11 @@ AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/md5 MD5_LIST)
 FIND_PATH(ffih ffi.h REQUIRED)
 INCLUDE_DIRECTORIES(${ffih})
 
-FIND_LIBRARY(libffi NAMES ffi PATHS REQUIRED)
-FIND_LIBRARY(libdl dl REQUIRED)
-FIND_LIBRARY(libm m REQUIRED)
+FIND_LIBRARY(libffi NAMES ffi REQUIRED)
+FIND_LIBRARY(libdl NAMES dl REQUIRED)
 
-MESSAGE("libm = ${libm}; libdl = ${libdl}; libffi = ${libffi}")
+MESSAGE("libdl = ${libdl}; libffi = ${libffi}")
 MESSAGE("ffi.h in ${ffih};")
 ADD_LIBRARY(vmcore SHARED ${SRC_LIST} ${GC_LIST} ${PASER_LIST} ${MEM_LIST} ${FILE_LIST} ${ARGUMENT_LIST} ${OFUNC_LIST} ${HANDLER_LIST} ${CLIB_LIST} ${MD5_LIST})
-TARGET_LINK_LIBRARIES(vmcore ${libffi} ${libdl} ${libm})
+TARGET_LINK_LIBRARIES(vmcore ${libffi} ${libdl} m)
 SET_TARGET_PROPERTIES(vmcore PROPERTIES OUTPUT_NAME "vmcore" VERSION 2.1)
