refactor: 修改cmake的install程序
为target添加rpath属性

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,10 +35,10 @@ MESSAGE("cmake file in is ${CMAKE_CURRENT_SOURCE_DIR}")
 MESSAGE("vmcore on ${vmcore_BINARY_DIR}")
 LINK_DIRECTORIES(${vmcore_BINARY_DIR})  # 添加vmcore的构建目录为寻找lib的目录
 ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/vmcore)
-LINK_LIBRARIES(vmcore)
-ADD_EXECUTABLE(VirtualMath main.c ${SRC_LIST} ${ARGUMENT_LIST})
-SET_TARGET_PROPERTIES(VirtualMath PROPERTIES OUTPUT_NAME "hellovm")
 
-INSTALL(DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ DESTINATION bin)
-INSTALL(DIRECTORY ${LIBRARY_OUTPUT_PATH}/ DESTINATION lib)
-INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/vmcore/include/virtualmath.h DESTINATION include)
+ADD_EXECUTABLE(VirtualMath main.c ${SRC_LIST} ${ARGUMENT_LIST})
+TARGET_LINK_LIBRARIES(VirtualMath vmcore)
+SET_TARGET_PROPERTIES(VirtualMath PROPERTIES OUTPUT_NAME "hellovm")
+set_target_properties(VirtualMath PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")  # 添加rpath
+
+INSTALL(TARGETS VirtualMath)
