--- a/vmcore/CMakeLists.txt
+++ b/vmcore/CMakeLists.txt
@@ -34,4 +34,7 @@ MESSAGE("libdl = ${libdl}; libffi = ${libffi}")
 MESSAGE("ffi.h in ${ffih};")
 ADD_LIBRARY(vmcore SHARED ${SRC_LIST} ${GC_LIST} ${PASER_LIST} ${MEM_LIST} ${FILE_LIST} ${ARGUMENT_LIST} ${OFUNC_LIST} ${HANDLER_LIST} ${CLIB_LIST} ${MD5_LIST})
 TARGET_LINK_LIBRARIES(vmcore ${libffi} ${libdl} m)
+TARGET_INCLUDE_DIRECTORIES(vmcore PRIVATE INCLUDE_DICT)
+SET_TARGET_PROPERTIES(vmcore PROPERTIES PUBLIC_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/include/virtualmath.h)
 SET_TARGET_PROPERTIES(vmcore PROPERTIES OUTPUT_NAME "vmcore" VERSION 2.1)
+INSTALL(TARGETS vmcore)
