--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,11 @@ SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH})
 SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH})
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin-${CMAKE_BUILD_TYPE})
 
+SET(HELLOVM_INCLUDE_DICT
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/vmcore/include
+        )
+
 IF (${SET_DEBUG})
     ADD_DEFINITIONS(-DDEBUG=1)
 ELSE()
@@ -24,21 +29,26 @@ ENDIF()
 
 ADD_DEFINITIONS(-DCC=\"${CMAKE_C_COMPILER}\")
 ADD_DEFINITIONS(-DSYS=\"${CMAKE_SYSTEM}.${CMAKE_SYSTEM_PROCESSOR}\")
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/vmcore/include BEFORE)
+INCLUDE_DIRECTORIES(${HELLOVM_INCLUDE_DICT} BEFORE)
 
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SRC_LIST)
-AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/argument ARGUMENT_LIST)
+AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/argument SRC_LIST)
 
-MESSAGE("project dir is ${PROJECT_SOURCE_DIR}")
-MESSAGE("cmake file in is ${CMAKE_CURRENT_SOURCE_DIR}")
+MESSAGE(STATUS "hellovm src = ${SRC_LIST}")
+MESSAGE(STATUS "project dir is ${PROJECT_SOURCE_DIR}")
+MESSAGE(STATUS "cmake file in is ${CMAKE_CURRENT_SOURCE_DIR}")
+MESSAGE(STATUS "vmcore on ${vmcore_BINARY_DIR}")
 
-MESSAGE("vmcore on ${vmcore_BINARY_DIR}")
 LINK_DIRECTORIES(${vmcore_BINARY_DIR})  # 添加vmcore的构建目录为寻找lib的目录
 ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/vmcore)
 
-ADD_EXECUTABLE(VirtualMath main.c ${SRC_LIST} ${ARGUMENT_LIST})
+ADD_EXECUTABLE(VirtualMath main.c ${SRC_LIST})
 TARGET_LINK_LIBRARIES(VirtualMath vmcore)
-SET_TARGET_PROPERTIES(VirtualMath PROPERTIES OUTPUT_NAME "hellovm")
-set_target_properties(VirtualMath PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")  # 添加rpath
+TARGET_INCLUDE_DIRECTORIES(vmcore PRIVATE HELLOVM_INCLUDE_DICT)
+ADD_DEPENDENCIES(VirtualMath vmcore)  # 添加依赖关系
+SET_TARGET_PROPERTIES(VirtualMath PROPERTIES
+        OUTPUT_NAME "hellovm"  # 设置输出名
+        INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib"  # 设置rpath
+        )
 
 INSTALL(TARGETS VirtualMath)
