feat: 调整了gc启动的机制

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,16 +15,16 @@ SET(HELLOVM_INCLUDE_DICT
         ${CMAKE_CURRENT_SOURCE_DIR}/vmcore/include
         )
 
-IF (${SET_DEBUG})
+IF (SET_DEBUG)
     ADD_DEFINITIONS(-DDEBUG=1)
 ELSE()
     ADD_DEFINITIONS(-DDEBUG=0)
 ENDIF()
 
-IF (${GC})
+IF (GC)
     ADD_DEFINITIONS(-DSTART_GC=1)
 ELSE()
-    ADD_DEFINITIONS(-DSTART_GC=0)
+    ADD_DEFINITIONS(-DSTART_GC=0)  # TODO-szh 处理不启动gc
 ENDIF()
 
 ADD_DEFINITIONS(-DCC=\"${CMAKE_C_COMPILER}\")
