--- a/vmcore/CMakeLists.txt
+++ b/vmcore/CMakeLists.txt
@@ -52,6 +52,8 @@ ELSE()
     MESSAGE(FATAL_ERROR "not found libdl")
 ENDIF()
 
+ADD_COMPILE_OPTIONS(-pg)
+ADD_LINK_OPTIONS(-pg)
 ADD_LIBRARY(vmcore SHARED ${SRC})
 TARGET_LINK_LIBRARIES(vmcore ${libffi} ${libdl} m)
 TARGET_INCLUDE_DIRECTORIES(vmcore PRIVATE VMCORE_INCLUDE_DICT)
