refactor: 调整了gc_freeze的运行机制

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,11 @@ MESSAGE(STATUS "vmcore on ${vmcore_BINARY_DIR}")
 LINK_DIRECTORIES(${vmcore_BINARY_DIR})  # 添加vmcore的构建目录为寻找lib的目录
 ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/vmcore)
 
+IF (PG)
+    ADD_COMPILE_OPTIONS(-pg)
+    ADD_LINK_OPTIONS(-pg)
+ENDIF()
+
 ADD_EXECUTABLE(VirtualMath main.c ${SRC_LIST})
 TARGET_LINK_LIBRARIES(VirtualMath vmcore)
 TARGET_INCLUDE_DIRECTORIES(vmcore PRIVATE HELLOVM_INCLUDE_DICT)
