--- a/vmcore/CMakeLists.txt
+++ b/vmcore/CMakeLists.txt
@@ -55,9 +55,12 @@ ENDIF()
 IF (PG)
     ADD_COMPILE_OPTIONS(-pg)
     ADD_LINK_OPTIONS(-pg)
+    ADD_LIBRARY(vmcore STATIC ${SRC})  ## debug模式下, 以静态库形式链接
+ELSE()
+    ADD_LIBRARY(vmcore SHARED ${SRC})
 ENDIF()
 
-ADD_LIBRARY(vmcore SHARED ${SRC})
+#ADD_LIBRARY(vmcore SHARED ${SRC})
 TARGET_LINK_LIBRARIES(vmcore ${libffi} ${libdl} m)
 TARGET_INCLUDE_DIRECTORIES(vmcore PRIVATE VMCORE_INCLUDE_DICT)
 SET_TARGET_PROPERTIES(vmcore PROPERTIES
