--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,8 @@ SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH})
 SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH})
 
 SET(HELLOVM_INCLUDE_DICT
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-        ${CMAKE_CURRENT_SOURCE_DIR}/vmcore/include
+        ${VirtualMath_SOURCE_DIR}/include
+        ${VirtualMath_SOURCE_DIR}/vmcore/include
         )
 
 IF (GC)
@@ -39,16 +39,16 @@ ADD_DEFINITIONS(-DCC=\"${CMAKE_C_COMPILER}\")
 ADD_DEFINITIONS(-DSYS=\"${CMAKE_SYSTEM}.${CMAKE_SYSTEM_PROCESSOR}\")
 INCLUDE_DIRECTORIES(${HELLOVM_INCLUDE_DICT} BEFORE)
 
-AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SRC_LIST)
-AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/argument SRC_LIST)
+AUX_SOURCE_DIRECTORY(${VirtualMath_SOURCE_DIR}/src SRC_LIST)
+AUX_SOURCE_DIRECTORY(${VirtualMath_SOURCE_DIR}/argument SRC_LIST)
 
 MESSAGE(STATUS "hellovm src = ${SRC_LIST}")
-MESSAGE(STATUS "project dir is ${PROJECT_SOURCE_DIR}")
+MESSAGE(STATUS "project dir is ${VirtualMath_SOURCE_DIR}")
 MESSAGE(STATUS "cmake file in is ${CMAKE_CURRENT_SOURCE_DIR}")
 MESSAGE(STATUS "vmcore on ${vmcore_BINARY_DIR}")
 
 LINK_DIRECTORIES(${vmcore_BINARY_DIR})  # 添加vmcore的构建目录为寻找lib的目录
-ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/vmcore)
+ADD_SUBDIRECTORY(${VirtualMath_SOURCE_DIR}/vmcore)
 
 IF (PG)
     ADD_COMPILE_OPTIONS(-pg)
