style: 添加了vstruct为int8_t的别名

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ SET(HELLOVM_INCLUDE_DICT
 IF (GC)
     ADD_DEFINITIONS(-DSTART_GC=1)
 ELSE()
-    ADD_DEFINITIONS(-DSTART_GC=0)  # TODO-szh 处理不启动gc
+    ADD_DEFINITIONS(-DSTART_GC=0)
 ENDIF()
 
 ADD_DEFINITIONS(-DCC=\"${CMAKE_C_COMPILER}\")
