refactor: 调整了cmake的文件结构
各个文件夹下均放置cmake文件
按功能划分动态库
clib不直接链接进入vmcore
cmake自动设定环境变量
cmake安装vmlib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,9 +56,9 @@ IF (PG)
 ENDIF()
 
 ADD_EXECUTABLE(VirtualMath main.c ${SRC_LIST})
-TARGET_LINK_LIBRARIES(VirtualMath vmcore)
-TARGET_INCLUDE_DIRECTORIES(vmcore PRIVATE HELLOVM_INCLUDE_DICT)
-ADD_DEPENDENCIES(VirtualMath vmcore)  # 添加依赖关系
+TARGET_LINK_LIBRARIES(VirtualMath vmcore_src)
+TARGET_INCLUDE_DIRECTORIES(vmcore_src PRIVATE HELLOVM_INCLUDE_DICT)
+ADD_DEPENDENCIES(VirtualMath vmcore_src)  # 添加依赖关系
 SET_TARGET_PROPERTIES(VirtualMath PROPERTIES
         OUTPUT_NAME "hellovm"  # 设置输出名
         INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib"  # 设置rpath
