fix & refactor: 修复了上次(78b0f365)重构的bug
78b0f365重构了cmake文件, 拆分出多个动态库
导致在windows平台中链接出现错误
目前在windows平台重构代码可以编译

--- a/vmcore/file/CMakeLists.txt
+++ b/vmcore/file/CMakeLists.txt
@@ -6,5 +6,6 @@ INCLUDE_DIRECTORIES(${VMCORE_INCLUDE_DICT} BEFORE)
 AUX_SOURCE_DIRECTORY(${vm_file_SOURCE_DIR} VM_FILE_SRC)
 
 ADD_LIBRARY(vm_file SHARED ${VM_FILE_SRC})
+TARGET_LINK_LIBRARIES(vm_file vm_memory)
 SET_TARGET_PROPERTIES(vm_file PROPERTIES OUTPUT_NAME "vmio")
 INSTALL(TARGETS vm_file)
