--- a/vmcore/parser/CMakeLists.txt
+++ b/vmcore/parser/CMakeLists.txt
@@ -1,11 +1,3 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-PROJECT(vm_parser C)
-SET(CMAKE_C_STANDARD 11)
-
-INCLUDE_DIRECTORIES(${VMCORE_INCLUDE_DICT} BEFORE)
-INCLUDE_DIRECTORIES(${vm_parser_SOURCE_DIR}/include BEFORE)
-AUX_SOURCE_DIRECTORY(${vm_parser_SOURCE_DIR} VM_PARSER_SRC)
-
-ADD_LIBRARY(vm_parser SHARED ${VM_PARSER_SRC})
-SET_TARGET_PROPERTIES(vm_parser PROPERTIES OUTPUT_NAME "parser")
-INSTALL(TARGETS vm_parser)
+AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} VM_PARSER_SRC)
+SET(vm_parser_src ${VM_PARSER_SRC} PARENT_SCOPE)
+SET(vm_parser_include ${CMAKE_CURRENT_SOURCE_DIR}/include PARENT_SCOPE)
