--- a/vmcore/gc/CMakeLists.txt
+++ b/vmcore/gc/CMakeLists.txt
@@ -1,10 +1,2 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-PROJECT(vm_gc C)
-SET(CMAKE_C_STANDARD 11)
-
-INCLUDE_DIRECTORIES(${VMCORE_INCLUDE_DICT} BEFORE)
-AUX_SOURCE_DIRECTORY(${vm_gc_SOURCE_DIR} VM_GC_SRC)
-
-ADD_LIBRARY(vm_gc SHARED ${VM_GC_SRC})
-SET_TARGET_PROPERTIES(vm_gc PROPERTIES OUTPUT_NAME "vmgc")
-INSTALL(TARGETS vm_gc)
+AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} VM_GC_SRC)
+SET(vm_gc_src ${VM_GC_SRC} PARENT_SCOPE)
