--- a/vmcore/ofunc/CMakeLists.txt
+++ b/vmcore/ofunc/CMakeLists.txt
@@ -1,7 +1,4 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-PROJECT(vm_ofunc C)
-SET(CMAKE_C_STANDARD 11)
-
-SET(OFUNC_INCLUDE_DICT ${PROJECT_SOURCE_DIR}/include)
-ADD_SUBDIRECTORY(${vm_ofunc_SOURCE_DIR}/clib)
-ADD_SUBDIRECTORY(${vm_ofunc_SOURCE_DIR}/src)
+ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/clib)
+ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src)
+SET(vm_ofunc_src ${vm_managers} ${vm_ofunc} PARENT_SCOPE)
+SET(vm_ofunc_include ${CMAKE_CURRENT_SOURCE_DIR}/include PARENT_SCOPE)
