--- a/vmcore/ofunc/clib/CMakeLists.txt
+++ b/vmcore/ofunc/clib/CMakeLists.txt
@@ -1,12 +1,4 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-PROJECT(vm_clib C)
-SET(CMAKE_C_STANDARD 11)
+AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SRC_FILES)
+SET(vm_managers ${SRC_FILES} PARENT_SCOPE)
 
-INCLUDE_DIRECTORIES(${VMCORE_INCLUDE_DICT} BEFORE)
-INCLUDE_DIRECTORIES(${OFUNC_INCLUDE_DICT} BEFORE)
-
-ADD_LIBRARY(vm_clib SHARED ${vm_clib_SOURCE_DIR}/manager)
-SET_TARGET_PROPERTIES(vm_clib PROPERTIES OUTPUT_NAME "clib")
-
-ADD_SUBDIRECTORY(${vm_clib_SOURCE_DIR}/src)
-INSTALL(TARGETS vm_clib)
+ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src)
