refactor: 添加了-fPIC参数
编译的时候使用-fPIC参数
编译与位置无关的库
同时解决了编译静态库的问题(-pg)

--- a/vmcore/CMakeLists.txt
+++ b/vmcore/CMakeLists.txt
@@ -20,6 +20,12 @@ FOREACH(DIR ${VMCORE_SRC_DIR})
 ENDFOREACH()
 MESSAGE(STATUS "vmcore src list = ${SRC}")
 
+IF (PG)
+    ADD_COMPILE_OPTIONS(-pg)
+    ADD_LINK_OPTIONS(-pg)
+ENDIF()
+
+ADD_COMPILE_OPTIONS(-fPIC)
 # 处理内部依赖库
 ADD_SUBDIRECTORY(${vmcore_SOURCE_DIR}/signalhandler)
 ADD_SUBDIRECTORY(${vmcore_SOURCE_DIR}/memory)
