refactor: 将clib移除与vmlib同级

--- a/vmcore/CMakeLists.txt
+++ b/vmcore/CMakeLists.txt
@@ -53,3 +53,6 @@ SET(CLIB_PATH ${CMAKE_INSTALL_PREFIX}/lib)
 INSTALL(DIRECTORY ${vmcore_SOURCE_DIR}/vmlib/ DESTINATION ${VMLIB_PATH})
 INSTALL(CODE "SET(ENV{VIRTUALMATHPATH} \"${VMLIB_PATH},${CLIB_PATH}\")")  # 设置系统环境变量(安装时候执行)
 INSTALL(CODE "MESSAGE(STATUS \"Now Install\")")  # 安装时运行
+
+# 安装clib
+ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/clib)
