--- a/vmcore/ofunc/clib/CMakeLists.txt
+++ b/vmcore/ofunc/clib/CMakeLists.txt
@@ -1,4 +1,4 @@
 AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SRC_FILES)
 SET(vm_managers ${SRC_FILES} PARENT_SCOPE)
 
-ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src)
+# clib的具体内容在vmcore上链接并且编译
