feat: ffi读取funcargs时使用__iter__
link #17

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,3 +65,4 @@ SET_TARGET_PROPERTIES(VirtualMath PROPERTIES
         )
 
 INSTALL(TARGETS VirtualMath)
+MESSAGE(STATUS "hellovm cmake configure finish")
